<resources>
    <string name="app_name">Software_project</string>
</resources>