<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/login"
    tools:context=".Login">

    <androidx.cardview.widget.CardView
        android:layout_width="358dp"
        android:layout_height="628dp"
        android:layout_gravity="center"
        android:layout_margin="50dp"
        android:layout_marginLeft="5dp"

        android:paddingTop="5dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="360dp"
            android:layout_height="467dp"
            android:layout_gravity="center|center_horizontal"
            android:layout_marginStart="1dp"
            android:layout_marginTop="2dp"
            android:orientation="vertical"
            android:padding="5dp">


            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:text="Login"
                android:textColor="@color/teal_700"
                android:textSize="30sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/user"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:hint="Userame"

                android:padding="15dp"
                android:paddingLeft="15dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background" />

            <EditText
                android:id="@+id/pasd"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:hint="Password"

                android:padding="15dp"
                android:paddingLeft="15dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background" />


            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="40dp"
                android:backgroundTint="#69F0CA"
                android:fontFamily="sans-serif-black"
                android:text="Login"
                android:textAllCaps="true"
                android:textColorHighlight="@color/teal_200"
                app:cornerRadius="50dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.372"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.499" />

            <TextView
                android:id="@+id/textv"
                android:layout_width="188dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="4dp"
                android:text="Don't Have an account!!"
                android:textAlignment="center"
                android:textColor="@color/teal_200"
                android:textColorHighlight="@color/teal_200"
                android:textSize="12sp"
                android:textStyle="bold" />


        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/button6"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:backgroundTint="#26A69A"
        android:text="Are you Admin?"
        android:textSize="20sp"
        android:textStyle="bold|italic" />


</LinearLayout>

