<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Update_Medical_report"
    android:id="@+id/update">

    <androidx.cardview.widget.CardView
        android:layout_width="324dp"
        android:layout_height="668dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="20dp"
        android:background="@color/teal_700"
        android:backgroundTint="#B2DFDB"
        android:padding="12dp"
        app:cardCornerRadius="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/ebutton"
            android:layout_width="149dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="490dp"
            android:backgroundTint="#4DB6B6"
            android:text="update"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.846" />

        <EditText
            android:id="@+id/nille"
            android:layout_width="248dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"

            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="Name"
            android:inputType="textPersonName"
            android:padding="15dp"
            android:textColorHint="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.343"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.377"
            tools:textColorHint="@color/black" />

        <EditText
            android:id="@+id/gastrice"
            android:layout_width="248dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="90dp"

            android:ems="10"
            android:hint="Date"
            android:inputType="textPersonName"
            android:padding="15dp"
            android:textColorHint="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.343"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.278" />

        <EditText
            android:id="@+id/glucosee"
            android:layout_width="248dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="155dp"

            android:ems="10"
            android:hint="Time"
            android:inputType="textPersonName"
            android:padding="15dp"
            android:textColorHint="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.343"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.086"
            tools:textColorHint="@color/black" />

        <EditText
            android:id="@+id/sugare"
            android:layout_width="248dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="225dp"

            android:ems="10"
            android:hint="Diastolic"
            android:inputType="textPersonName"
            android:padding="15dp"
            android:textColorHint="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.343"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.188"
            tools:textColorHint="@color/black" />

        <EditText
            android:id="@+id/sodiume"
            android:layout_width="248dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="295dp"

            android:ems="10"
            android:hint="Systolic"
            android:inputType="textPersonName"
            android:padding="15dp"
            android:textColorHint="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.343"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.188" />

        <EditText
            android:id="@+id/urine"
            android:layout_width="248dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="355dp"

            android:ems="10"
            android:hint="Heart Rate"
            android:inputType="textPersonName"
            android:padding="15dp"
            android:textColorHint="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.343"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.188"
            tools:textColorHint="@color/black" />

        <EditText
            android:id="@+id/henloe"
            android:layout_width="248dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="420dp"

            android:ems="10"
            android:hint="Comment"
            android:inputType="textPersonName"
            android:padding="15dp"
            android:textColorHint="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.343"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.188" />

        <Button
            android:id="@+id/nexte"
            android:layout_width="149dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="550dp"
            android:backgroundTint="#4DB6B6"
            android:text="View Page"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.846" />

        <Button
            android:id="@+id/logout_buttone"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="600dp"
            android:backgroundTint="#4DB6B6"
            android:text="logout"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.846" />

    </androidx.cardview.widget.CardView>

</LinearLayout>