...
<!--                <Space-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_weight="1" />-->

<!--                <Button-->
<!--                    android:id="@+id/edit_button"-->
<!--                    android:layout_width="4dp"-->
<!--                    android:layout_height="48dp"-->
<!--                    android:layout_weight="1"-->
<!--                    android:foregroundTint="#84FFFF"-->
<!--                    app:icon="@android:drawable/ic_menu_edit" />-->

<!--                <Space-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_weight="1" />-->

<!--                <Button-->
<!--                    android:id="@+id/delete_button"-->
<!--                    app:layout_constraintTop_toBottomof="@+id/edit_button"-->
<!--                    android:layout_width="18dp"-->
<!--                    android:layout_height="match_parent"-->
<!--                    android:layout_weight="1"-->
<!--                    app:icon="@android:drawable/ic_menu_delete" />-->

...
